--- a/css/main/main.css
+++ b/css/main/main.css
@@ -1,7 +1,97 @@
 @charset "utf-8";
+@import url("https://fonts.googleapis.com/css2?family=Sunflower:wght@300&display=swap");
+.sunflower-light {
+  font-family: "Sunflower", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
 
 .main {
   position: relative;
   margin-left: 400px;
   padding: 20px;
+}
+
+.sorting {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 2rem;
+}
+.sorting li {
+  /* position: relative; */
+}
+.sorting li a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 8rem;
+  height: 2.6rem;
+  border: 1px solid #d9d9d9;
+  border-radius: 50%;
+  padding: 6px 12px;
+  color: #2e2e2e;
+  background: radial-gradient(#f2f2f2, #ffeeee);
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+  font-family: "Sunflower", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+.sorting li:hover a {
+  background: linear-gradient(#ffeeee, #fdc9ee);
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+}
+.sorting li.on a {
+  background: linear-gradient(#ffeeee, #fdc9ee);
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+}
+
+/* section
+================================================================ */
+
+.section {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  transform: translate(0.1s);
+}
+.section article {
+  position: relative;
+  padding: 10px;
+}
+.section article div {
+  position: relative;
+  width: 15vw;
+  background-color: #fafafa;
+  border-radius: 20px;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.section article:hover div {
+  transform: translateY(-5px);
+  background-color: #fcf5f5;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
+}
+.section article div img {
+  width: 100%;
+}
+.section article div h2 {
+  font-size: 1.6rem;
+  margin: 1.4rem 0 0.8rem;
+}
+.section article div p {
+  font-size: 1.4rem;
+  line-height: 1.25;
+  color: #777;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-clamp: 3;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
